[gd_scene load_steps=5 format=3 uid="uid://cx0w4mqd7aul1"]

[ext_resource type="Script" path="res://Scripts/inventory_slot.gd" id="1_eqg1n"]
[ext_resource type="Texture2D" uid="uid://dl2l1agacae6y" path="res://Sprites/icon_carottes.png" id="2_qu612"]
[ext_resource type="FontFile" uid="uid://bi04iecmbt37l" path="res://Fonts/ARCADECLASSIC.TTF" id="3_pf5sm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lxa4s"]

[node name="Inventory_Slot" type="Control" groups=["inventory_slots"]]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 80.0
offset_bottom = 80.0
script = ExtResource("1_eqg1n")

[node name="OuterBorder" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0
color = Color(0.52549, 1, 0.996078, 1)

[node name="InnerBorder" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 75.0
offset_bottom = 75.0
color = Color(0.509286, 0.509286, 0.509286, 1)

[node name="ItemIcon" type="Sprite2D" parent="InnerBorder"]
position = Vector2(40, 40)
scale = Vector2(4, 4)
texture = ExtResource("2_qu612")
region_rect = Rect2(64, 16, 16, 16)

[node name="ItemQuantity" type="Label" parent="InnerBorder"]
layout_mode = 0
offset_left = 2.0
offset_right = 42.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.167393, 0.0721674, 0.113021, 1)
theme_override_fonts/font = ExtResource("3_pf5sm")
theme_override_font_sizes/font_size = 30
text = "1
"

[node name="ItemButton" type="Button" parent="."]
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0
focus_neighbor_top = NodePath("../UsagePanel")
theme_override_styles/normal = SubResource("StyleBoxEmpty_lxa4s")

[node name="DetailsPanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = -90.0
offset_right = 170.0
offset_bottom = -10.0
color = Color(0.52372, 1, 0.996343, 1)

[node name="ItemName" type="Label" parent="DetailsPanel"]
layout_mode = 0
offset_left = 2.0
offset_right = 70.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 1)
theme_override_fonts/font = ExtResource("3_pf5sm")
theme_override_font_sizes/font_size = 30
text = "NAME"

[node name="ItemType" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -15.5
offset_right = 70.0
offset_bottom = 15.5
grow_vertical = 2
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 0.784314)
theme_override_fonts/font = ExtResource("3_pf5sm")
theme_override_font_sizes/font_size = 30
text = "TYPE"

[node name="ItemEffect" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -31.0
offset_right = 70.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 0.588235)
theme_override_fonts/font = ExtResource("3_pf5sm")
theme_override_font_sizes/font_size = 30
text = "EFFECT"

[node name="UsagePanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = -90.0
offset_right = 170.0
offset_bottom = -10.0
focus_neighbor_bottom = NodePath("../ItemButton")
color = Color(0.52549, 1, 0.996078, 1)

[node name="UseButton" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 7.0
offset_right = 75.0
offset_bottom = 38.0
grow_horizontal = 2
focus_neighbor_bottom = NodePath("../../ItemButton")
text = "USE"

[node name="DropButton" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -37.0
offset_right = 75.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_bottom = NodePath("../../ItemButton")
text = "DROP
"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="gui_input" from="ItemButton" to="." method="_on_item_button_gui_input"]
[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="ItemButton" to="." method="_on_item_button_pressed"]
